--- a/index.html
+++ b/index.html
@@ -1,187 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vape Nebula</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vape Shop Mini App</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     body {
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(120deg, #1e1e2f, #2c3e50);
-      color: #f1f1f1;
+      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-    }
-    .container {
-      padding: 20px;
+      padding: 10px;
+      background-color: #f0f0f0;
+      color: #333;
     }
     h1 {
+      font-size: 24px;
       text-align: center;
-      font-size: 2rem;
-      color: #00d1ff;
-      margin-bottom: 10px;
     }
-    .product {
-      background: #292c3c;
-      border-radius: 15px;
+    .vape-item {
+      background: white;
       padding: 15px;
-      margin-bottom: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-shadow: 0 0 10px rgba(0, 209, 255, 0.2);
-    }
-    .product img {
-      max-width: 180px;
-      border-radius: 10px;
-    }
-    .product-info {
-      text-align: center;
-    }
-    .flavour-select {
-      margin-top: 10px;
-    }
-    select, button {
-      font-family: inherit;
-      margin-top: 5px;
-      padding: 5px 10px;
-      font-size: 1rem;
+      margin: 10px 0;
       border-radius: 8px;
-      border: none;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-    button {
-      background: #00d1ff;
-      color: black;
+    .vape-item h3 {
+      margin: 0 0 10px;
+      font-size: 18px;
+    }
+    .vape-item select, .vape-item button {
+      padding: 8px;
+      margin: 5px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .vape-item button {
+      background: #28a745;
+      color: white;
+      border: none;
       cursor: pointer;
     }
-    button:hover {
-      background: #00bcd4;
+    .vape-item button:hover {
+      background: #218838;
     }
-    .cart {
-      background: #1a1c2b;
-      border-top: 2px solid #00d1ff;
-      padding: 20px;
-    }
-    .cart h2 {
-      color: #00d1ff;
-    }
-    .cart-item {
-      margin-bottom: 10px;
-    }
-    .checkout {
+    #cart {
       margin-top: 20px;
-      text-align: center;
+      padding: 15px;
+      background: white;
+      border-radius: 8px;
     }
-    .checkout a {
-      background: #00ffae;
-      color: #000;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 12px;
-      display: inline-block;
+    #cart h2 {
+      font-size: 20px;
+      margin: 0 0 10px;
     }
-    .checkout a:hover {
-      background: #00d89c;
+    #cart ul {
+      list-style: none;
+      padding: 0;
+    }
+    #cart li {
+      margin: 5px 0;
+    }
+    #cart:empty {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Vape Nebula</h1>
-    <div id="products">Loading...</div>
-    <div class="cart">
-      <h2>🛒 Cart</h2>
-      <div id="cart-items"></div>
-      <div class="checkout" id="checkout"></div>
-    </div>
+  <h1>Vape Shop</h1>
+  <div id="vape-list"></div>
+  <div id="cart">
+    <h2>Cart</h2>
+    <ul id="cart-items"></ul>
+    <p>Total: $<span id="cart-total">0.00</span></p>
   </div>
 
   <script>
-    const cart = [];
+    // Initialize Telegram Web App
+    const WebApp = window.Telegram.WebApp;
+    WebApp.ready();
 
-    async function fetchVapes() {
-      const res = await fetch('./vapes.json');
-      const vapes = await res.json();
-      renderProducts(vapes);
+    // Initialize cart
+    let cart = [];
+
+    // Load vapes from JSON
+    fetch('vapes.json')
+      .then(response => response.json())
+      .then(vapes => {
+        const vapeList = document.getElementById('vape-list');
+        vapes.forEach(vape => {
+          const vapeDiv = document.createElement('div');
+          vapeDiv.className = 'vape-item';
+          vapeDiv.innerHTML = `
+            <h3>${vape.name} - $${vape.price.toFixed(2)}</h3>
+            <select id="flavor-${vape.id}">
+              ${vape.flavors.map(flavor => `<option value="${flavor}">${flavor}</option>`).join('')}
+            </select>
+            <button onclick="addToCart(${vape.id}, '${vape.name}', ${vape.price}, document.getElementById('flavor-${vape.id}').value)">Add to Cart</button>
+          `;
+          vapeList.appendChild(vapeDiv);
+        });
+      })
+      .catch(error => console.error('Error loading vapes:', error));
+
+    // Add to cart
+    function addToCart(id, name, price, flavor) {
+      cart.push({ id, name, price, flavor });
+      updateCart();
     }
 
-    const productsContainer = document.getElementById('products');
-    const cartItems = document.getElementById('cart-items');
-    const checkoutDiv = document.getElementById('checkout');
-
-    function renderProducts(vapes) {
-      productsContainer.innerHTML = '';
-      vapes.forEach((vape, index) => {
-        const product = document.createElement('div');
-        product.className = 'product';
-
-        const image = `<img src="${vape.image || 'https://via.placeholder.com/180x180?text=No+Image'}" alt="${vape.name}" />`;
-        const info = `
-          <div class="product-info">
-            <h3>${vape.name}</h3>
-            <p>${vape.puffs ? vape.puffs + ' puffs' : ''} ${vape.nicotine ? ' | ' + vape.nicotine : ''} ${vape.price ? '| €' + vape.price : ''}</p>
-          </div>
-        `;
-
-        const flavourOptions = vape.flavours.map(f => `<option value="${f}">${f}</option>`).join('');
-        const flavourSelect = `
-          <div class="flavour-select">
-            <label>Flavour:</label>
-            <select id="flavour-${index}">${flavourOptions}</select>
-          </div>
-        `;
-
-        const addButton = `<button onclick="addToCart(${index})">Add to Cart</button>`;
-
-        product.innerHTML = image + info + flavourSelect + addButton;
-        productsContainer.appendChild(product);
-      });
-
-      window.vapes = vapes; // for global access in addToCart
-    }
-
-    function addToCart(index) {
-      const vape = window.vapes[index];
-      const flavour = document.getElementById(`flavour-${index}`).value;
-      const key = `${vape.name} - ${flavour}`;
-      const existing = cart.find(item => item.key === key);
-      if (existing) {
-        existing.qty++;
-      } else {
-        cart.push({ key, name: vape.name, flavour, price: vape.price, qty: 1 });
-      }
-      renderCart();
-    }
-
-    function removeFromCart(key) {
-      const idx = cart.findIndex(item => item.key === key);
-      if (idx > -1) cart.splice(idx, 1);
-      renderCart();
-    }
-
-    function renderCart() {
+    // Update cart display
+    function updateCart() {
+      const cartItems = document.getElementById('cart-items');
+      const cartTotal = document.getElementById('cart-total');
       cartItems.innerHTML = '';
-      cart.forEach(item => {
-        const line = document.createElement('div');
-        line.className = 'cart-item';
-        line.innerHTML = `
-          ${item.name} - ${item.flavour} | €${item.price} x ${item.qty}
-          <button onclick="removeFromCart('${item.key}')">Remove</button>
-        `;
-        cartItems.appendChild(line);
+      let total = 0;
+
+      cart.forEach((item, index) => {
+        const li = document.createElement('li');
+        li.textContent = `${item.name} (${item.flavor}) - $${item.price.toFixed(2)}`;
+        cartItems.appendChild(li);
+        total += item.price;
       });
 
+      cartTotal.textContent = total.toFixed(2);
+
+      // Update Telegram Main Button
       if (cart.length > 0) {
-        const message = cart.map(item => `${item.qty}x ${item.name} (${item.flavour})`).join('%0A');
-        const url = `https://t.me/stas_vape?text=🛒%20Order:%0A${message}`;
-        checkoutDiv.innerHTML = `<a href="${url}" target="_blank">Send to Stas</a>`;
+        WebApp.MainButton.text = 'Send Order';
+        WebApp.MainButton.show();
+        WebApp.MainButton.enable();
+        WebApp.MainButton.onClick(sendOrder);
       } else {
-        checkoutDiv.innerHTML = '';
+        WebApp.MainButton.hide();
       }
     }
 
-    fetchVapes();
+    // Send order to bot
+    function sendOrder() {
+      if (cart.length === 0) return;
+
+      const orderDetails = cart.map(item => 
+        `${item.name} (${item.flavor}) - $${item.price.toFixed(2)}`
+      ).join('\n');
+      const total = cart.reduce((sum, item) => sum + item.price, 0).toFixed(2);
+      const message = `New Order:\n${orderDetails}\n\nTotal: $${total}`;
+
+      // Send data to bot
+      WebApp.sendData(message);
+
+      // Clear cart after sending
+      cart = [];
+      updateCart();
+    }
+
+    // Set Telegram theme
+    WebApp.onEvent('themeChanged', () => {
+      document.body.style.backgroundColor = WebApp.themeParams.bg_color || '#f0f0f0';
+      document.body.style.color = WebApp.themeParams.text_color || '#333';
+    });
   </script>
 </body>
 </html>
