--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       background: rgba(255, 255, 255, 0.1);
       border-radius: 1rem;
       padding: 1rem;
-      width: 150px;
+      width: 180px;
       text-align: center;
       cursor: pointer;
       transition: 0.3s;
@@ -63,6 +63,33 @@
       width: 100%;
       border-radius: 0.5rem;
       margin-bottom: 0.5rem;
+    }
+
+    .card-name {
+      font-size: 1.2rem;
+      font-weight: bold;
+      background: linear-gradient(to right, #ff00f2, #00ffe7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 5px #000;
+      margin-bottom: 0.3rem;
+    }
+
+    .card hr {
+      border: none;
+      border-top: 1px solid #fff;
+      margin: 0.3rem 0;
+    }
+
+    .card-description {
+      font-size: 0.85rem;
+      margin-bottom: 0.3rem;
+    }
+
+    .card-price {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #ff00f2;
     }
 
     button {
